[gd_scene load_steps=2 format=2]

[ext_resource path="res://Cenas/Menu/MenuInicial.gd" type="Script" id=1]

[node name="MenuInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Título" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -39.0
margin_top = 70.0
margin_right = 39.0
margin_bottom = 14.0
text = "Chupa Cabra"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -34.0
margin_right = 30.5
margin_bottom = 34.0

[node name="Jogar" type="Button" parent="VBoxContainer"]
margin_right = 61.0
margin_bottom = 20.0
text = "Jogar"

[node name="Opções" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 61.0
margin_bottom = 44.0
text = "Opções"

[node name="Sair" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 61.0
margin_bottom = 68.0
text = "sair"

[connection signal="button_down" from="VBoxContainer/Jogar" to="." method="_on_Jogar_button_down"]
[connection signal="button_down" from="VBoxContainer/Opções" to="." method="_on_Opes_button_down"]
[connection signal="button_down" from="VBoxContainer/Sair" to="." method="_on_Sair_button_down"]
